<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/ds_size_04"
        android:paddingTop="@dimen/ds_size_06"
        android:paddingBottom="@dimen/ds_size_02">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_buy"
                style="@style/DsPrimaryButton"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:text="@string/buy"
                app:cornerRadius="@dimen/ds_size_08"
                app:layout_constraintBottom_toBottomOf="@id/image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_container"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                app:layout_constraintVertical_bias="1" />

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/common_close"
                android:padding="@dimen/ds_size_02"
                android:src="@drawable/ds_ic_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/ds_gray_light" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/ds_charcoal"
                app:cardCornerRadius="@dimen/ds_radius_mi"
                app:cardElevation="@dimen/ds_size_none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/DsTextHighlightSmall"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@color/ds_charcoal"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:maxLines="4"
                        android:paddingTop="@dimen/ds_size_09"
                        android:text="@string/no_cover"
                        app:layout_constraintBottom_toBottomOf="@id/image_cover"
                        app:layout_constraintEnd_toEndOf="@id/image_cover"
                        app:layout_constraintStart_toStartOf="@id/image_cover"
                        app:layout_constraintTop_toTopOf="@id/image_cover" />

                    <ImageView
                        android:id="@+id/image_cover"
                        android:layout_width="@dimen/ds_size_19"
                        android:layout_height="@dimen/ds_size_25"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="#80000000"
                        app:layout_constraintBottom_toBottomOf="@id/image_cover"
                        app:layout_constraintEnd_toEndOf="@id/image_cover"
                        app:layout_constraintStart_toStartOf="@id/image_cover">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/check_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/ds_size_03"
                            android:button="@drawable/ds_favorite_selector"
                            tools:checked="false" />

                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_title"
                style="@style/DsTextHighlightLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_03"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="3"
                app:layout_constraintBottom_toBottomOf="@id/image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_container"
                app:layout_constraintTop_toBottomOf="@id/button_close"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/text_subtitle"
                style="@style/DsTextHighlightSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_size_02"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_container"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/text_author"
                style="@style/DsTextHighlightSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_size_01"
                android:textColor="@color/ds_cyan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_subtitle"
                tools:maxLines="1"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/text_title_description"
                style="@style/DsTextHighlightSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_size_04"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_author" />

            <TextView
                android:id="@+id/text_description"
                style="@style/DsTextSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title_description"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ds_charcoal"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/ds_size_04"
        android:paddingTop="@dimen/ds_size_01">

        <TextView
            style="@style/DsTextHighlightSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publisher" />

        <TextView
            style="@style/DsTextHighlightSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/pages" />

        <TextView
            style="@style/DsTextHighlightSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/published_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ds_charcoal"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/ds_size_04"
        android:paddingBottom="@dimen/ds_size_01">

        <TextView
            android:id="@+id/text_publisher"
            style="@style/DsTextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Apress" />

        <TextView
            android:id="@+id/text_page_count"
            style="@style/DsTextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="370" />

        <TextView
            android:id="@+id/text_published_date"
            style="@style/DsTextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="10-08-2012" />

    </LinearLayout>

</LinearLayout>
